# ze

./: .gitignore  .travis.yml  AUTHORS  Doxyfile  Makefile  Makefile.am  README  README.md  config.h  configure  configure.ac  ze  ze.c  zerc.scm
.github/workflows/: doxygen.yml
docs/: buffer_8c.html  buffer_8h.html  buffer_8h_source.html  classes.html  dir_000002_000001.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  edit_8c.html  edit_8h.html  edit_8h__incl.md5  edit_8h_source.html  fileio_8c.html  fileio_8c__incl.md5  fileio_8h.html  fileio_8h__dep__incl.md5  files.html  functions.html  globals.html  globals_a.html  globals_c.html  globals_e.html  globals_enum.html  globals_eval.html  globals_func.html  globals_g.html  globals_i.html  globals_l.html  globals_p.html  globals_r.html  globals_s.html  globals_t.html  globals_vars.html  group__buffer.html  group__buffer.md5  group__core.html  group__core.md5  group__edit.html  group__hooks.html  group__init.html  (+73 more)
docs/api/: annotated.html  annotated_dup.js  buffer_8c.html  buffer_8c.js  buffer_8h.html  (+215 more)
include/: buffer.h  edit.h  fileio.h  hooks.h  init.h  input.h  plugins.h  render.h  row.h  search.h  status.h  syntax.h  templates.h  terminal.h  util.h  ze.h
plugins/: file-header.scm  format.scm  go-to-line.scm  hello.scm  hooks.scm  save-and-format.scm
src/: buffer.c  edit.c  fileio.c  hooks.c  index.dox  input.c  main.c  plugins.c  render.c  row.c  search.c  status.c  syntax.c  terminal.c  util.c
templates/: notes  readme
(+128 files in other folders)
